tests/baselines/reference/throwType_function_return.errors.txt
tests/cases/compiler/throwType_function_return.ts(5,1): error TS2794: Type instantiated results in a throw type saying: 
    Cannot divided by 0
tests/cases/compiler/throwType_function_return.ts(10,1): error TS2794: Type instantiated results in a throw type saying: 
    Wrong


==== tests/cases/compiler/throwType_function_return.ts (2 errors) ====
    function checkedDivide<T extends number>(x: T): T extends 0 ? throw 'Cannot divided by 0' : number {
        if (x === 0) throw new Error('')
        return 5 / x
    }
    checkedDivide(0)
    ~~~~~~~~~~~~~~~~
!!! error TS2794: Type instantiated results in a throw type saying: 
!!! error TS2794:     Cannot divided by 0
    checkedDivide(1)
    
    const theAnswerToEverything = <T>(x: T): T extends 42 ? T : throw "Wrong" => x
    theAnswerToEverything(42 as const)
    theAnswerToEverything('')
    ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2794: Type instantiated results in a throw type saying: 
!!! error TS2794:     Wrong
    